--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,3 +25,5 @@ Suggests:
     knitr,
     rmarkdown
 LazyData: false
+URL: https://github.com/anthonydn/qctimeseries
+BugReports: https://github.com/anthonydn/qctimeseries/issues
