--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,10 @@ Depends: R (>= 4.1)
 Imports:
     shiny,
     plotly,
-    data.table
+    data.table,
+    dplyr,
+    tibble,
+    ggplot2
 Suggests:
     testthat (>= 3.0.0),
     knitr,
