dev_check fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,15 @@ export(qc_window_app)
 import(data.table)
 import(plotly)
 import(shiny)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,facet_grid)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labeller)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_colour_manual)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_bw)
+importFrom(stats,as.formula)
+importFrom(stats,time)
