--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Description: A Shiny-based visual tool that uses interactive brushing to
     a few million rows.  Features include arbitrary POSIXct time columns,
     window-by-window navigation, per-point or bulk flagging, and an optional
     secondary-variable overlay panel.
-License: MIT + file LICENSE
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
@@ -22,7 +22,8 @@ Imports:
     data.table,
     dplyr,
     tibble,
-    ggplot2
+    ggplot2,
+	stats
 Suggests:
     testthat (>= 3.0.0),
     knitr,
