--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,10 @@ export(qc_apply_flags)
 export(qc_check_plot)
 export(qc_progress)
 export(qc_remove_flags)
+export(qc_save_all_plots_png)
 export(qc_transfer)
 export(qc_window_app)
+export(qc_write_exports)
 import(data.table)
 import(plotly)
 import(shiny)
@@ -20,5 +22,12 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_colour_manual)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,png)
+importFrom(grid,grid.layout)
+importFrom(grid,grid.newpage)
+importFrom(grid,pushViewport)
+importFrom(grid,viewport)
+importFrom(readr,write_csv)
 importFrom(stats,as.formula)
 importFrom(stats,time)
