working on examples

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,6 @@ Suggests:
     knitr,
     rmarkdown
 LazyData: false
-URL: https://github.com/anthonydn/qctimeseries, http://crustnet.org/qctimeseries/
+URL: https://github.com/anthonydn/qctimeseries
 BugReports: https://github.com/anthonydn/qctimeseries/issues
 VignetteBuilder: knitr
