--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,6 @@ importFrom(grid,grid.layout)
 importFrom(grid,grid.newpage)
 importFrom(grid,pushViewport)
 importFrom(grid,viewport)
-importFrom(readr,write_csv)
 importFrom(stats,as.formula)
+importFrom(stats,setNames)
 importFrom(stats,time)
