--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(qc_save_all_plots_png)
 export(qc_transfer)
 export(qc_window_app)
 export(qc_write_exports)
+export(ts_viewer)
 import(data.table)
 import(plotly)
 import(shiny)
